- waiting status while connecting to server - synchronize & save rotation & scaling of elements - fix z-index bug

--- a/sass/stylesheet.scss
+++ b/sass/stylesheet.scss
@@ -537,6 +537,12 @@ a:focus, .btn:focus {
 	list-style-type: none;
 	text-indent: -0.75em;
 }
+body.wait {
+	cursor:wait !important;
+	* {
+		cursor:wait !important;
+	}
+}
 .relative {
 	position: relative;
 }
